--- a/styles/footer.css
+++ b/styles/footer.css
@@ -14,7 +14,7 @@
             padding-right: 100px;
             
         }
-        p{
+        footer p{
             color: rgba(5, 158, 5, 0.949);
             font-weight: bolder;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
