--- a/styles/event_photos.css
+++ b/styles/event_photos.css
@@ -5,18 +5,24 @@ body{
     margin: 0;
 }
 
-h1{
-    color: #43AB5F;
-    font-weight: 560;
-    font-size: 5vh;
-    padding: 1.5vh;
+h2{
+  font-weight: 500;
+  font-size: 2.5rem;
+  color: #43AB5F;
+  text-align: center;
+  position: relative;
+  margin-bottom: 3rem;
 }
     
-hr{
-    width: 90px;
-    background-color: #43AB5F;
-    height: 1.2px;
-    margin-bottom: -1em;
+h2::after{
+  content: '';
+  width: 5rem;
+  height: 3px;
+  background-color: #43AB5F;
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 img{
