--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -61,11 +61,13 @@ body{
 
 /* overall styling */
 
-.Photos{
+h2 { 
+    font-weight: 500;
+    font-size: 2.5rem;
     color: #43AB5F;
-    font-weight: 560;
-    font-size: 5vh;
-    padding: 1.5vh;
+    text-align: center;
+    position: relative;
+    margin-bottom: 3rem;
 }
 
 .card{
@@ -82,10 +84,15 @@ body{
     border-radius: 5% 5% 0% 0%;
 }
 
-.line{
-    width: 90px;
+h2::after{
+    content: '';
+    width: 5rem;
+    height: 3px;
     background-color: #43AB5F;
-    height: 1.2px;
+    position: absolute;
+    bottom: -20px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .card-text{
