--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,6 +3,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
         }
         .footer_containeer{
             box-sizing: border-box;
@@ -12,6 +13,7 @@
             padding-top: 10px;
             padding-bottom: 10px;
             padding-right: 100px;
+            /* font-size: 23px; */
             
         }
         footer p{
@@ -19,6 +21,7 @@
             font-weight: bolder;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             padding-bottom: 40px;
+            text-align: center;
         }
         .footer_box{
             color: rgba(5, 158, 5, 0.949);
@@ -35,6 +38,7 @@
         }
         .footer_box_1 i{
             margin-right: 18px;
+            color: rgba(5, 158, 5, 0.949);
         }
         .footer_box_1{
             padding-bottom: 15px;
