--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -6,6 +6,25 @@ body{
     margin: 0;    
 }
 
+h2 { 
+    font-weight: 500;
+    font-size: 2rem;
+    color: #43AB5F;
+    text-align: center;
+    position: relative;
+    margin-bottom: 4.5rem;
+}
+h2::after{
+    content: '';
+    width: 4rem;
+    height: 3px;
+    background-color: #43AB5F;
+    position: absolute;
+    bottom: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 /* for 1st row of cards */
 
 .container1{
