--- a/styles/home.css
+++ b/styles/home.css
@@ -1,165 +1,158 @@
 body {
-    font-family: 'Poppins', sans-serif;
-    /* font-size: 23px; */
+  font-family: "Poppins", sans-serif;
+  /* font-size: 23px; */
 }
-h2 { 
-    font-weight: 500;
-    font-size: 2rem;
-    color: #43AB5F;
-    text-align: center;
-    position: relative;
-    margin-bottom: 4.5rem;
+h2 {
+  font-weight: 500;
+  font-size: 2rem;
+  color: #43ab5f;
+  text-align: center;
+  position: relative;
+  margin-bottom: 4.5rem;
 }
-h2::after{
-    content: '';
-    width: 4rem;
-    height: 3px;
-    background-color: #43AB5F;
-    position: absolute;
-    bottom: -20px;
-    left: 50%;
-    transform: translateX(-50%);
+h2::after {
+  content: "";
+  width: 4rem;
+  height: 3px;
+  background-color: #43ab5f;
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  transform: translateX(-50%);
 }
-p{
-    color: #888;
+p {
+  color: #888;
 }
-
 
 .homeContent {
-    text-align: justify;
-    text-justify: inter-word;
-    font-size: 23px;
+  text-align: justify;
+  text-justify: inter-word;
+  font-size: 26px;
 }
 
-.container{
-    max-width: 85%;
-    margin: 4rem auto;
+.container {
+  max-width: 85%;
+  margin: 4rem auto;
 }
 .card-shadow {
-    border-width: 0;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
-    transition: 0.25s cubic-bezier(.27,.49,.62,1.47);
+  border-width: 0;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
+  transition: 0.25s cubic-bezier(0.27, 0.49, 0.62, 1.47);
 }
 .card-title {
-    font-size: 18px;
-    font-weight: 500;
-    border: 0;
+  font-size: 26px;
+  font-weight: 500;
+  border: 0;
+  margin-bottom: 1rem;
 }
 .card-content {
-    font-size: 16px;
+  font-size: 23px;
 }
 .event-header {
-    color: #555;
-    margin-bottom: 8px;
+  color: #555;
+  margin-bottom: 8px;
 }
 .event-time {
-    color: #555;
-    margin-bottom: 8px;
+  color: #555;
+  margin-bottom: 8px;
 }
-.card-shadow:hover{
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
-    transform: scale(1.04);
-    transition: 0.25s cubic-bezier(.27,.49,.62,1.47);
-}
-
-
-.carousel-indicators [data-bs-target]{
-    height: 6px;
-    width: 6px;
-    margin: 0px 5px;
-    border-radius: 50%;
-    border: 2px solid white;
-    background-color: transparent;
-}
-.carousel-indicators .active{
-    background-color: white;
+.card-shadow:hover {
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
+  transform: scale(1.04);
+  transition: 0.25s cubic-bezier(0.27, 0.49, 0.62, 1.47);
 }
 
-
+.carousel-indicators [data-bs-target] {
+  height: 6px;
+  width: 6px;
+  margin: 0px 5px;
+  border-radius: 50%;
+  border: 2px solid white;
+  background-color: transparent;
+}
+.carousel-indicators .active {
+  background-color: white;
+}
 
 i {
-    color: #888;
-    margin-right: 10px;
+  color: #888;
+  margin-right: 10px;
 }
 i.fa-clock {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 .blog-continue {
-    text-decoration: none;
-    color: #888;
+  text-decoration: none;
+  color: #888;
 }
 .blog-continue:hover {
-    color: #555;
+  color: #555;
 }
 
-
 .splide {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .thumbnails {
-    display: flex;
-    margin: 1rem auto 0;
-    padding: 0;
-    justify-content: center;
+  display: flex;
+  margin: 1rem auto 0;
+  padding: 0;
+  justify-content: center;
 }
 
 .thumbnail {
-    width: 150px;
-    height: 150px;
-    overflow: hidden;
-    list-style: none;
-    margin: 0 0.2rem;
-    cursor: pointer;
-    opacity: 0.3;
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  list-style: none;
+  margin: 0 0.2rem;
+  cursor: pointer;
+  opacity: 0.3;
 }
 
 .thumbnail.is-active {
-    opacity: 1;
+  opacity: 1;
 }
 
 .thumbnail img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .navbar-container {
-    width: 100px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 100%;
-    height: 60px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    align-items: center;
-  }
+  width: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 100%;
+  height: 60px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  align-items: center;
+}
 
-  a {
-    text-decoration: none;
-    position: relative;
-    left: 55px;
-    color: black;
+a {
+  text-decoration: none;
+  position: relative;
+  left: 55px;
+  color: black;
+}
 
-  }
+a:hover {
+  color: rgb(51, 223, 51);
+}
 
+#club-name {
+  position: relative;
+  font-family: "Montserrat", sans-serif;
+  top: -10px;
+}
 
-  a:hover {
-    color: rgb(51, 223, 51);
-  }
-
-  #club-name {
-    position: relative;
-    font-family: 'Montserrat', sans-serif;
-    top: -10px;
-  }
-
-  #logo-img {
-
-    height: 26px;
-    width: 26px;
-    position: relative;
-    left: -35px;
-    top: 24px;
-    border: 0px;
-    border-radius: 16px;
-  }
+#logo-img {
+  height: 26px;
+  width: 26px;
+  position: relative;
+  left: -35px;
+  top: 24px;
+  border: 0px;
+  border-radius: 16px;
+}
